--- a/Practica2/makefile
+++ b/Practica2/makefile
@@ -1,6 +1,6 @@
 COMPILE = gcc -g -c  
 LINK = gcc -g -o
-EXEC = ejercicio3a ejercicio3b
+EXEC = ejercicio3a ejercicio3b ejercicio6
 THREAD = -lpthread
 
 all: $(EXEC)
@@ -12,6 +12,10 @@ ejercicio3a: ejercicio3a.c
 ejercicio3b: ejercicio3b.c
 	$(COMPILE) ejercicio3b.c $(THREAD)
 	$(LINK) ejercicio3b ejercicio3b.o $(THREAD)
+
+ejercicio6: ejercicio6.c
+	$(COMPILE) ejercicio6.c
+	$(LINK) ejercicio6 ejercicio6.o 
 
 
 clean:
