--- a/Practica2/makefile
+++ b/Practica2/makefile
@@ -1,6 +1,6 @@
 COMPILE = gcc -g -c  
 LINK = gcc -g -o
-EXEC = ejercicio3a ejercicio3b ejercicio6
+EXEC = ejercicio3a ejercicio3b ejercicio4 ejercicio6 ejercicio8
 THREAD = -lpthread
 
 all: $(EXEC)
@@ -13,10 +13,17 @@ ejercicio3b: ejercicio3b.c
 	$(COMPILE) ejercicio3b.c $(THREAD)
 	$(LINK) ejercicio3b ejercicio3b.o $(THREAD)
 
+ejercicio4: ejercicio4.c
+	$(COMPILE) ejercicio4.c $(THREAD)
+	$(LINK) ejercicio4 ejercicio4.o $(THREAD)
+
 ejercicio6: ejercicio6.c
 	$(COMPILE) ejercicio6.c
 	$(LINK) ejercicio6 ejercicio6.o 
 
+ejercicio8: ejercicio8.c
+	$(COMPILE) ejercicio8.c
+	$(LINK) ejercicio8 ejercicio8.o
 
 clean:
 	rm -rf *.o $(EXEC)
