--- a/Practica3/makefile
+++ b/Practica3/makefile
@@ -1,6 +1,6 @@
 COMPILE = gcc -g -c  
 LINK = gcc -g -o
-EXEC = ejercicio2 #ejercicio3a ejercicio3b ejercicio4 ejercicio6 ejercicio10 ejercicio8
+EXEC = ejercicio2 ejercicio5 #ejercicio3b ejercicio4 ejercicio6 ejercicio10 ejercicio8
 THREAD = -lpthread
 
 all: $(EXEC)
@@ -9,9 +9,9 @@ ejercicio2: ejercicio2.c
 	$(COMPILE) ejercicio2.c $(THREAD)
 	$(LINK) ejercicio2 ejercicio2.o $(THREAD)
 
-ejercicio3a: ejercicio3a.c
-	$(COMPILE) ejercicio3a.c
-	$(LINK) ejercicio3a ejercicio3a.o 
+ejercicio5: ejercicio5.c
+	$(COMPILE) ejercicio5.c
+	$(LINK) ejercicio5 ejercicio5.o semaforos.c semaforos.h test.h
 
 ejercicio3b: ejercicio3b.c
 	$(COMPILE) ejercicio3b.c $(THREAD)
